updated website. working on a few other projects. i should really start using commits properly.

--- a/index.html
+++ b/index.html
@@ -1,101 +1,98 @@
-<!DOCTYPE html>
 <html>
 <head>
-<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="index/source/materialize/materialize.min.css"  media="screen,projection"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>PikaDude - Home</title>
-<style>
-@font-face {
-  font-family: 'Roboto';
-  src: url('index/source/fonts/Roboto.ttf');
-}
-.noselect {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.text {
-color: white;
--webkit-text-stroke: 1px #000066;
-  text-shadow:
-    3px 3px 0 #000066,
-   -1px -1px 0 #000066,  
-    1px -1px 0 #000066,
-   -1px  1px 0 #000066,
-    1px  1px 0 #000066;
-}
-html { 
-  background: url(index/source/images/background.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-</style>
-<link rel="icon" href="index/source/images/icon.ico">
-<meta name="description" content="Welcome to my site, we have cookies">
-<meta name="keywords" content="pikadude, pikadude01, PikaGirl, pika, dude, snailspeed, airhorn, memes">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="assets/stylesheets/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="assets/stylesheets/swag.css" />
+    <script type="text/javascript" src="assets/scripts/jquery.js"></script>
+    <script type="text/javascript" src="assets/scripts/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/scripts/magic.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/images/icon.ico">
+    <title>PikaDude - Home</title>
+    <meta name="description" content="Welcome to my site, we have even more cookies!">
+    <meta name="keywords" content="pikadude, pikadude01, PikaGirl, pika, dude, snailspeed, airhorn, discord">
 </head>
 <body>
-<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script type="text/javascript" src="index/source/materialize/materialize.min.js"></script>
-<script type="text/javascript" src="index/source/scripts/wew.js"></script>
-<script type="text/javascript" src="index/source/scripts/memes.js"></script>
-<ul id="links" class="dropdown-content">
-  <li><a href="http://twitch.tv/pikadude01">Twitch</a></li>
-  <li><a href="https://www.youtube.com/channel/UC80tQvTMQuawbweof9FYF4A">YouTube</a></li>
-  <li><a href="https://github.com/PikaDude">GitHub</a></li>
-</ul>
-<ul id="lonks" class="dropdown-content">
-  <li><a href="http://twitch.tv/pikadude01">Twitch</a></li>
-  <li><a href="https://www.youtube.com/channel/UC80tQvTMQuawbweof9FYF4A">YouTube</a></li>
-  <li><a href="https://github.com/PikaDude">GitHub</a></li>
-</ul>
-  <nav class="noselect">
-    <div class="nav-wrapper" style="background: #000066;">
-      <a href="http://pikadude.xyz" class="brand-logo"><i class="material-icons left">videogame_asset</i>PikaDude's Website</a>
-	  <a data-activates="mobile-demo" class="button-collapse" style="cursor: pointer;"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-	    <li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
-        <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaGirl</a></li>
-        <li><a href="http://snailspeed.tk"><i class="material-icons left">wb_sunny</i>Snail Speed</a></li>
-		<li><a href="http://theairhorn.tk"><i class="material-icons left">volume_up</i>The Airhorn</a></li>
-        <li><a class="dropdown-button" data-activates="links"><i class="material-icons left">add_circle_outline</i>Links</a></li>
-		<li><a href="http://www.supercounters.com/stats/1291258"><!-- BEGIN: Powered by Supercounters.com -->
-<center>
-<script type="text/javascript" src="http://widget.supercounters.com/texthit.js"></script><script type="text/javascript">var sc_texthit_var = sc_texthit_var || [];sc_text_hit(1291258,"Views","#ffffff");</script><i class="material-icons left">directions_walk</i><br><noscript><a href="http://www.supercounters.com">Tumblr Hit Counter</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
-</a>
-</li>
-      </ul>
-	  <ul class="side-nav" id="mobile-demo">
-	  	<li><a href="http://pikadude.xyz" style="background: white; color: #000066"><i class="material-icons left">home</i>Home</a></li>
-	    <li><a href="http://pikabot01.xyz"><i class="material-icons left">settings</i>PikaGirl</a></li>
-		<li><a href="http://snailspeed.tk"><i class="material-icons left">wb_sunny</i>Snail Speed</a></li>
-		<li><a href="http://theairhorn.tk"><i class="material-icons left">volume_up</i>The Airhorn</a></li>
-        <li><a class="dropdown-button" data-activates="lonks"><i class="material-icons left">add_circle_outline</i>Links</a></li>
-	  </ul>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper" style="background-color: rgb(46, 49, 54);">
+                <a class="brand-logo" style="margin: auto 15px; color: rgb(4, 164, 227);" onclick="button1();">PikaDude</a>
+                <ul class="right hide-on-med-and-down">
+                    <li id="1lol" class="active"><a class="thang" style="font-weight: bold" id="1" onclick="button1();">Home</a></li>
+                    <li id="2lol"><a class="thang" id="2" onclick="button2();">About Me</a></li>
+                    <li id="3lol"><a class="thang" id="3" onclick="button3();">Projects</a></li>
+                    <li id="4lol"><a class="thang" id="4" onclick="button4();">Additional Links</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
-  </nav>
-<br>
-<br>
-<br>
-<br>
-<p class="text" style="font-size:500%" align="center">PikaDude</p>
-<p class="text" style="font-size:200%" align="center">A.K.A PikaDude01, Pikachu Dude!</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="http://widget.supercounters.com/tab.js"></script><script type="text/javascript">var sc_tab_var = sc_tab_var || [];sc_tab(1291258,"left","lower")</script><br><noscript><a href="http://www.supercounters.com/">Tumblr Online Counter</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
+    <div class="parallax-container" style="height: 560px" id="home">
+        <div class="parallax">
+            <img src="assets/images/background.jpg">
+        </div>
+        <h1 style="font-size: 100px; text-align: center; line-height: 450px;" class="title">PikaDude</h1>
+    </div>
+    <div class="parallax-container" style="height: 650px" id="aboutme">
+        <div class="parallax" style="background-color: #f4d742">
+        </div>
+        <p style="text-align: center">
+            <a style="font-size: 100px; line-height: 300px;" class="title">About Me</a>
+            <br />
+            <a class="desc">Hi! My name is PikaDude (Pikachu Dude). I'm a developer and a gamer. I mostly work with C#, but from time to time, try my hand with Javascript and on rare occasions Java. I'm okay when it comes to markup such as HTML5, but I'm not the best designer (as you can probably tell). If I'm not coding away, I'm either busy or unleashing my inner gamer. I live in Australia, Sydney if you want to be a little bit more detailed. I code in my spare time mostly, I've made a wide variety of projects from bots for Discord, to websites, to even screensavers! You can check them all out below.</a>
+        </p>
+    </div>
+    <div class="parallax-container" style="height: 700px;" id="projects">
+        <div class="parallax" style="background-color: #f44271">
+        </div>
+        <p style="text-align: center">
+            <a style="font-size: 100px;" class="title">Projects</a>
+        </p>
+        <div style="padding: 20px;">
+            <div style="background-color: white;">
+                <ul class="collapsible" data-collapsible="accordion">
+                    <li>
+                        <div class="collapsible-header"><b>PikaGirl - Discord Bot</b></div>
+                        <div class="collapsible-body"><p>PikaGirl is a bot for Discord. It has a wide variety of features from slapping friends to gambling. Originally known as "PikaBot01", it know goes by the name of PikaGirl.<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://pikabot01.xyz" target="_blank">Website</a><a style="margin: 10px 10px" class="waves-effect waves-light btn" href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot&permissions=-1" target="_blank">Add To Server</a></p></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><b>Donald Trump - Discord Bot</b></div>
+                        <div class="collapsible-body"><p>Another bot for Discord. Originally made as a joke, but it somehow made it past 100 servers without me realising, so I guess thats a thing. It says real quotes from Donald Trump... thats about it.<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="https://discordapp.com/oauth2/authorize?&client_id=194727999927615488&scope=bot" target="_blank">Add To Server</a></p></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><b>Phoenix Wright - Discord Bot</b></div>
+                        <div class="collapsible-body"><p>Guess what? Another bot for Discord. My friend wouldn't stop playing the new Ace Attorney game, so I decided to make a bot for some reason. Generate your own objections just like in the Ace Attorney games.<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://pikadude.xyz/projects/PhoenixWrightBot/home.html" target="_blank">Website</a><a style="margin: 10px 10px" class="waves-effect waves-light btn" href="https://discordapp.com/oauth2/authorize?&client_id=226964246339125248&scope=bot" target="_blank">Add To Server</a></p></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><b>Snail Speed - Website</b></div>
+                        <div class="collapsible-body"><p>Just like everything else, this was made as a joke. It's still work in progress, but for now, you can watch a snail on its dumb quest across the world on its website.<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://pikadude.xyz/projects/SnailSpeed/Snail.html" target="_blank">Visit Page</a></p></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><b>The Airhorn - Website</b></div>
+                        <div class="collapsible-body"><p>A JavaScript and HTML experiment. Click an airhorn to play airhorn noises.<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://theairhorn.tk/" target="_blank">Visit Page</a></p></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><b>Live ScreenSaver - ScreenSaver/Program</b></div>
+                        <div class="collapsible-body"><p>A work in progress screensaver that displays webcams from around the world!<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="https://github.com/PikaDude/Live-ScreenSaver" target="_blank">View Repository</a></p></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container" style="height: 800px" id="links">
+        <div class="parallax" style="background-color: #017589">
+        </div>
+        <p style="text-align: center">
+            <a style="font-size: 100px;" class="title">Additional Links</a>
+            <br />
+            <a class="github-button" href="https://github.com/PikaDude" data-style="mega" data-count-href="/PikaDude/followers" data-count-api="/users/PikaDude#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @PikaDude on GitHub">Follow @PikaDude</a>
+            <br />
+            <br />
+            <img src="assets/images/TwitchButton.png" width="160" height="40" onclick="window.open('http://twitch.tv/pikadude01', '_blank');" style="cursor: pointer;" />
+            <br />
+            <br />
+            <iframe src="https://discordapp.com/widget?id=185970479134146560&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+        </p>
+    </div>
 </body>
 </html>
