--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p style="text-align: center">
             <a style="font-size: 100px; line-height: 300px;" class="title">About Me</a>
             <br />
-            <a class="desc">Hi! My name is PikaDude (Pikachu Dude). I'm a developer and a gamer. I mostly work with C#, but from time to time, try my hand with Javascript and on rare occasions Java. I'm okay when it comes to markup such as HTML5, but I'm not the best designer (as you can probably tell). If I'm not coding away, I'm either busy or unleashing my inner gamer. I live in Australia, Sydney if you want to be a little bit more detailed. I code in my spare time mostly, I've made a wide variety of projects from bots for Discord, to websites, to even screensavers! You can check them all out below.</a>
+            <a class="desc">Hi! My name is PikaDude (Pikachu Dude). I'm a developer and a gamer. I mostly work with C#, but from time to time, I decide to try my hand with JavaScript and on rare occasions Java. I'm okay when it comes to markup such as HTML5, but I'm not the best designer (as you can probably tell). If I'm not coding, I'm either busy or unleashing my inner gamer. I live in Australia, Sydney if you want to be a little bit more detailed. I code in my spare time mostly, I've made a wide variety of projects from bots for Discord, to websites, to even screensavers! You can check them all out below.</a>
         </p>
     </div>
     <div class="parallax-container" style="height: 700px;" id="projects">
