Added button to homepage

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                         <div class="collapsible-header"><b>Live ScreenSaver - ScreenSaver/Program</b></div>
                         <div class="collapsible-body"><p>A work in progress screensaver that displays webcams from around the world!<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="https://github.com/PikaDude/Live-ScreenSaver" target="_blank">View Repository</a></p></div>
                     </li>
+					<li>
+                        <div class="collapsible-header"><b>Wumpus Clicker Online</b></div>
+                        <div class="collapsible-body"><p>A website where you can click a wumpus live with other players from around the world!<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://pikadude.xyz/projects/WumpusClickerOnline/click-it-you-nerd.html" target="_blank">Visit Page</a></p></div>
+                    </li>
                 </ul>
             </div>
         </div>
