--- a/projects/WumpusClickerOnline/click-it-you-nerd.html
+++ b/projects/WumpusClickerOnline/click-it-you-nerd.html
@@ -11,8 +11,8 @@
         <img src="assets/wumpus.png" width="400" onclick="send('click');" style="position: relative; cursor: pointer;"/>
     </p>
     <div class="bottom noselect">
-        <a style="font-size: 30px;" id="clicks">Wumpi: ???</a><br />
-        <a style="font-size: 30px;" id="cps">Wumpi Per Second: ???</a><br />
+        <a style="font-size: 30px;" id="clicks">Wumpuses: ???</a><br />
+        <a style="font-size: 30px;" id="cps">Wumpuses Per Second: ???</a><br />
         <a style="font-size: 30px;" id="users">Users Online: ???</a><br />
         <br />
         <br />
