Small Wumpus Clicker edit

--- a/projects/WumpusClickerOnline/click-it-you-nerd.html
+++ b/projects/WumpusClickerOnline/click-it-you-nerd.html
@@ -3,6 +3,9 @@
     <title>Wumpus Clicker Online - Click a wumpus with friends!</title>
     <link type="text/css" rel="stylesheet" href="assets/wumpus.css" />
     <script type="text/javascript" src="assets/wumpus.js"></script>
+	<link rel="icon" href="assets/wumpus.png">
+    <meta name="description" content="You have one mission. And that's to click that Wumpus!">
+    <meta name="keywords" content="wumpus, clubwumpus, pikadude, softsoap, memes">
 </head>
 <body>
     <p class="noselect" style="text-align: center;">
