--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </li>
 					<li>
                         <div class="collapsible-header"><b>Wumpus Clicker Online - Website</b></div>
-                        <div class="collapsible-body"><p>A website where you can click a wumpus live with other players from around the world!<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://pikadude.xyz/projects/WumpusClickerOnline/click-it-you-nerd.html" target="_blank">Visit Page</a></p></div>
+                        <div class="collapsible-body"><p>A website where you can click a wumpus live with other players from around the world!<br /><a style="margin: 10px auto" class="waves-effect waves-light btn" href="http://clicker.clubwump.us" target="_blank">Visit Page</a></p></div>
                     </li>
                 </ul>
             </div>
