--- a/projects/MemesAgainstHumanity/callhelp.html
+++ b/projects/MemesAgainstHumanity/callhelp.html
@@ -8,7 +8,9 @@
 
 <body>
     <button id="button" class="cancer">Share</button>
-    <span id="hah"></span>
+    <button id="hah" class="cancer otherButton" onclick="regen();">Get A New Match</button>
+    <button class="spaghetti" onclick="screwThis();">Back To Index</button>
+    <button class="NO" onclick="wewlad();">I HAVE A SUGGESTION!!!</button>
     <h1 class="center title">Memes Against Humanity</h1>
     <p id="someBS" class="title"></p>
     <div class="center" id="poop">
@@ -31,8 +33,8 @@
                     <div class="card" style="text-align: center;">
                         <p class="cardText noselect">Share This URL<br /><br /><br /><textarea class="textBox" id="hollaHollaGetDollar"></textarea></p>
                     </div>
-                    <div class="card thatCard noselect tweet" onclick="tweet();">
-                        <p class="cardText" style="color: #00aced;">
+                    <div class="card thatCard tweet" onclick="tweet();">
+                        <p class="cardText noselect" style="color: #00aced;">
                             Share On Twitter<br /><br /><img src="assets/meme.png" class="dumbBird">
                         </p>
                     </div>
