--- a/Radio/Listen.html
+++ b/Radio/Listen.html
@@ -14,14 +14,14 @@
     <div id='body-fx-wrapper'>
         <canvas id='visualizer'></canvas>
         <div id='foreground' class="poop wow">
-            <img class="circle poop" src="pika.png" />
-            <p class="radio center">PikaDude's Radio</p>
+            <img class="circle poop" src="pika.png" style="width: 15%; position: absolute;" />
+            <p style="position: fixed; color: #33aaff; font-size: 400%" class="center">PikaDude's Radio</p>
             <audio crossorigin='anonymous' id='Stream' autoplay>
                 <source type="audio/ogg">
             </audio>
             <div class="center" style="position: fixed; top: 60%; width: 90%; height: 10%">
-                <i class="material-icons click" onclick="play()">play_arrow</i>
-                <i class="material-icons click" onclick="pause()">pause</i>
+                <i class="material-icons" style="cursor: pointer" onclick="play()">play_arrow</i>
+                <i class="material-icons" style="cursor: pointer" onclick="pause()">pause</i>
                 <a style="font-size: 250%;" id="title">Loading...</a>
                 <a class="center" style="position: fixed; font-size: 150%" id="users">Loading...</a>
                 <a class="center" style="position: fixed; top: 85%;" id="chrome">I highly recommend you use Google Chrome for the best experience.</a>
@@ -30,7 +30,7 @@
                     <i class="material-icons button tooltipped" data-position="bottom" data-delay="50" data-tooltip="Download M3U" id="button" onclick="window.open('http://pikabot01.xyz:8000/PikaDude.m3u')">get_app</i>
                 </div>
             </div>
-            <a style="padding: 5px; bottom: 0px; left: 0px; position: fixed; font-size: 150%;">Volume:<br /><span onclick="setVol(0);" class="click" id="vol-mute">Mute </span><span onclick="setVol(0.5);" class="volume-thing" id="vol-low">Low</span><span onclick="setVol(1);" class="volume-thing" id="vol-med">Med</span><span onclick="setVol(1.5);" class="volume-thing" id="vol-high">High</span><span onclick="setVol(2);" id="vol-ultra" class="volume-thing">Ultra</span></a>
+            <a style="padding: 5px; bottom: 0px; left: 0px; position: fixed; font-size: 150%;">Volume:<br /><span onclick="setVol(0);" style="cursor: pointer;" id="vol-mute">Mute </span><span onclick="setVol(0.5);" style="cursor: pointer; padding: 0px 5px" id="vol-low">Low</span><span onclick="setVol(1);" style="cursor: pointer; padding: 0px 5px" id="vol-med">Med</span><span onclick="setVol(1.5);" style="cursor: pointer; padding: 0px 5px" id="vol-high">High</span><span onclick="setVol(2);" id="vol-ultra" style="cursor: pointer; padding: 0px 5px">Ultra</span></a>
             <img style="padding: 5px; width: 20%; bottom: 0px; right: 0px; position:fixed; cursor: pointer" id="discord-logo" onclick="window.open('https://discord.gg/012P7BEh4fzkryZ6P')" src="Discord-Logo+Wordmark-White.png" />
         </div>
     </div>
