I forgot that this existed, huh.

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<p>Moved to <a href="http://pikadude.me">http://pikadude.me</a></p>
+<p>Moved to <a href="https://pikadude.me/>https://pikadude.me//a></p>
 </body>
 </html>
